--- a/front/css/chat.css
+++ b/front/css/chat.css
@@ -27,7 +27,8 @@ body {height: 100vh;}
 .main-div {
     position: relative;
     padding: 1rem;
-    padding-bottom: 7rem;
+    padding-right: 1.5rem;
+    /* padding-bottom: 7rem; */
 }
 
 .chatting {
@@ -42,12 +43,18 @@ body {height: 100vh;}
 }
 
 .profile {
-    width: 3rem;
-    height: 3rem;
-    background-color: rgb(150, 196, 217);
-    border: 0.005rem black solid;
-    border-radius: 20rem;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
+    padding: 0.4rem;
+}
+
+.imgdiv {
+    /* border: 0.005rem #ddd solid; */
+    border-radius: 10rem;
+    padding: 0.2rem;
+}
+
+.name {
+    margin: 0.5rem 0;
 }
 
 .contentC {
@@ -55,7 +62,8 @@ body {height: 100vh;}
     /* border: 0.005rem black solid; */
     background-color: rgb(215, 238, 248);
     border-radius: 1rem;
-    max-width: 25rem;
+    max-width: 20rem;
+    font-size: 1.2rem;
 }
 
 .user {
@@ -66,17 +74,18 @@ body {height: 100vh;}
     padding: 0.7rem 1rem;
     border-radius: 1rem;
     background-color: #f9d4df;
-    max-width: 25rem;
+    max-width: 20rem;
+    font-size: 1.2rem;
 }
 
 
 .footer {
     background-color: white;
     width: 100%;
-    height: 5rem;
+    /* height: 5rem; */
     position: fixed;
     bottom: 0;
-    padding: 0rem 1rem;
+    padding: 1.5rem 1.5rem;
     padding-top: 2rem;
     display: flex;
     justify-content: space-between;
@@ -84,13 +93,17 @@ body {height: 100vh;}
 }
 
 .inputbox {
-    width: 80%;
-    height: 3rem;
+    width: 74%;
+    height: 1.6rem;
     border: #F8436C 0.3rem solid;
     border-radius: 1rem;
+    padding: 0.5rem 1rem;
+    padding-left: 1rem;
+    font-size: 1.3rem;
 }
 
 .xi-send {
+    margin-right: 0.3rem;
     width: 15%;
     height: 3rem;
     color: #F8436C;
