--- a/front/css/chat.css
+++ b/front/css/chat.css
@@ -1,69 +1,67 @@
 * {margin: 0;}
 
-body {height: 100vh;}
-
-.inner-div {position: relative;}
-
-.inner-header {
+/* 헤더 */
+.gapy {
     display: flex;
     justify-content: space-between;
-    position: sticky;
     top: 0;
     z-index: 1;
+    background-color: #F8436C;
 }
 
 .Qlist {
     width: 40%;
-    height: 3rem;
-    line-height: 3rem;
+    height: 3.5rem;
+    line-height: 3.5rem;
     background-color: white;
     border-radius: 1rem;
-    margin: 1rem;
+    margin: 1.1rem;
     font-size: 1.5rem;
     text-align: center;
     color: #F8436C;
 }
 
-.main-div {
+.container {
     position: relative;
-    padding: 1rem;
-    padding-right: 1.5rem;
-    /* padding-bottom: 7rem; */
+    
 }
 
 .chatting {
-    /* padding: 1rem; */
-    width: 100%;
-    height: calc(100%-5rem);
+    padding: 1rem 1.5rem 0 1rem;
+    width: 93%;
+    height: 98%;
+    overflow: auto;
+    font-family: 'SEBANG_Gothic';
 }
 
-.chatbot , .user{
-    padding: 0.8rem 0rem;
-    display: flex;
-}
+.chatbot , .user{display: flex;}
+
+.chatbot {padding: 0.4rem 0 0.8rem 0}
+.user {padding: 0.3rem 0rem;}
 
 .profile {
+    margin-top: 0.5rem;
     margin-right: 0.5rem;
-    padding: 0.4rem;
 }
 
 .imgdiv {
-    /* border: 0.005rem #ddd solid; */
     border-radius: 10rem;
     padding: 0.2rem;
 }
 
 .name {
     margin: 0.5rem 0;
+    text-align: left;
+    font-size: 1.2rem;
 }
 
 .contentC {
-    padding: 0.7rem 1rem;
-    /* border: 0.005rem black solid; */
+    padding: 0.8rem 1rem;
     background-color: rgb(215, 238, 248);
     border-radius: 1rem;
     max-width: 20rem;
     font-size: 1.2rem;
+    text-align: left;
 }
 
 .user {
@@ -76,20 +74,19 @@ body {height: 100vh;}
     background-color: #f9d4df;
     max-width: 20rem;
     font-size: 1.2rem;
+    text-align: left;
 }
 
 
 .footer {
     background-color: white;
     width: 100%;
-    /* height: 5rem; */
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
-    padding: 1.5rem 1.5rem;
-    padding-top: 2rem;
+    padding: 1rem 1.5rem;
+    /* padding-top: 2rem; */
     display: flex;
     justify-content: space-between;
-
 }
 
 .inputbox {
