--- a/front/css/common.css
+++ b/front/css/common.css
@@ -1,4 +1,3 @@
-
 /* 반응형 */
 @media screen and (min-width:768px) {
     html, body{font-size: 120%;}
@@ -38,6 +37,10 @@
     html, body{font-size: 40%;}
 }
 
+
+
+
+
 /* 가평물결체 */
 @font-face {
     font-family: 'GapyeongWave';
@@ -46,6 +49,7 @@
     font-style: normal;
 }
 
+
 /* 세방고딕체 */
 @font-face {
     font-family: 'SEBANG_Gothic';
@@ -53,33 +57,39 @@
     font-weight: 400;
     font-style: normal;
 }
-/* @font-face {
-    font-family: 'SEBANG_Gothic';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2104@1.0/SEBANG_Gothic_Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
-} */
 
-.inner-header {
-    font-family: 'GapyeongWave';
-    width: 100%;
-    height: 5rem;
-    background-color: #F8436C;
+.gapy { font-family: 'GapyeongWave'; font-size: 3.5rem;}
+.sebang { font-family: 'SEBANG_Gothic';}
+
+body {width: 100%; margin: 0 auto ;}
+
+.main { height: 100vh;}
+
+header {
+    width: 100%; 
+    display: flex;
+    height: 6rem;
 }
 
-.inner-header .xi-arrow-left {
-    width: 8%;
-    height: 3rem;
-    line-height: 3rem;
+.xi-arrow-left {
     margin: 1rem;
-    font-size: 2.5rem;
-    text-align: center;
+    font-size: 3.5rem;
     color: white;
+    font-weight: bold;
 }
 
-.inner-div .main-div {
-    font-family:'SEBANG_Gothic';
-    font-weight: 400;
+.container {
+    width: 100%;
+    height: calc(100% - 12rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;
 
 }
 
+footer {
+    height: 6rem;
+    width: 100%;
+}
