--- a/front/chat/chat.css
+++ b/front/chat/chat.css
@@ -22,8 +22,8 @@
 }
 
 .container {
-    position: relative;
-    
+    position: relative; 
+    display: block;
 }
 
 .chatting {
@@ -102,7 +102,7 @@
 }
 
 .xi-send {
-    margin-right: 0.3rem;
+    margin-right: 1.2rem;
     width: 15%;
     height: 3rem;
     color: #f7436d;
